--- a/fmr.html
+++ b/fmr.html
@@ -18,5 +18,35 @@
         <label for="">Number</label>
         <input type="tel" placeholder="Your Phone Number">
     </form>
+    <fieldset>
+        <legend>Pick One Pitha</legend>
+        <input type="radio" name="pitha">
+        <label for="">Vapa</label>
+        <br>
+        <input type="radio" name="pitha">
+        <label for="">Ruti</label>
+        <br>
+        <input type="radio" name="pitha">
+        <label for="">Chitoi</label>
+        <br>
+    </fieldset>
+    <fieldset>
+        <legend>Select One or More Pitha</legend>
+        <input type="checkbox" value="Tel pitha">
+        <label for="">Tel Pitha</label>
+        <br>
+        <input type="checkbox" value="Taler pitha">
+        <label for="">Taler Pitha</label>
+        <br>
+        <input type="checkbox" value="Custom pitha">
+        <label for="">Custom Pitha</label>
+        <br>
+    </fieldset>
+    <fieldset>
+        <legend>Your Special Message</legend>
+        <textarea name="message" id="" cols="80" rows="5"></textarea>
+    </fieldset>
+    <input type="button" value="Submit">
+    <input type="reset" Reset>
 </body>
 </html>
